node/overseer/overseer-gen/tests/ui/err-07-duplicate-field.stderr
error[E0599]: no method named `i_like_pie` found for struct `OverseerBuilder<_, FieldInit<AwesomeSubSys>, FieldInit<f64>>` in the current scope
  --> tests/ui/err-07-duplicate-field.rs:58:4
   |
22 | #[overlord(signal=SigSigSig, error=OverseerError, event=Event, gen=AllMessages)]
   | -------------------------------------------------------------------------------- method `i_like_pie` not found for this
...
58 |         .i_like_pie(42.0) // Double initialization
   |          ^^^^^^^^^^------ help: remove the arguments
   |          |
   |          field, not a method
